--- a/Config/english.cfg
+++ b/Config/english.cfg
@@ -14,7 +14,7 @@ related : 0.5
 
 related_threshold : 0.25
 
-selected_lexical_resources : ["synonym", "paraphrase"]
+selected_lexical_resources : ["synonyms", "paraphrases"]
 
 theta = 0.9
 
